--- a/action.yml
+++ b/action.yml
@@ -28,6 +28,10 @@ inputs:
     description: 'sftp args'
     required: false
 
+  ssh_command:
+    description: 'execute command when login your server after sftp deploy success'
+    required: false
+
 
 runs:
   using: 'docker'
@@ -40,6 +44,7 @@ runs:
     - ${{ inputs.local_path }}
     - ${{ inputs.remote_path }}
     - ${{ inputs.args }}
+    - ${{ inputs.ssh_command }}
 
 branding:
   icon: 'upload-cloud'  
